# youbot

./: README.md  program.txt  punkty.txt
brics_actuator/: CMakeLists.txt
brics_actuator/msg/: ProgramExecuteVelocity.msg
gui_ros_template/: CMakeLists.txt  package.xml
gui_ros_template/include/youbot_gui/: main_window.hpp  qnode.hpp
gui_ros_template/src/: main_window.cpp  qnode.cpp
gui_ros_template/ui/: main_window.ui
youbot_description-kinetic-devel/: package.xml
youbot_description-kinetic-devel/robots/: youbot_arm_only.urdf.xacro  youbot_base_only.urdf.xacro
youbot_description-kinetic-devel/urdf/youbot_base/: base.transmission.xacro
youbot_driver_ros_interface-hydro-devel/: CMakeLists.txt  README.md  package.xml
youbot_driver_ros_interface-hydro-devel/include/youbot_driver_ros_interface/: YouBotConfiguration.h  YouBotOODLWrapper.h
youbot_driver_ros_interface-hydro-devel/launch/: youbot_driver.launch
youbot_driver_ros_interface-hydro-devel/src/: YouBotOODLWrapper.cpp  youbot_oodl.cpp
youbot_driver_ros_interface-hydro-devel/src/examples/: arm_keyboard_control.cpp  fk_test.cpp  fk_test_1.cpp  ik_test.cpp  youbot_arm_test.cpp
youbot_gui/: CMakeLists.txt  README.md  mainpage.dox  package.xml
youbot_gui/include/youbot_gui/: main_window.hpp  qnode.hpp
youbot_gui/resources/: images.qrc
youbot_gui/src/: main.cpp  main_window.cpp  qnode.cpp
youbot_gui/ui/: main_window.ui
