<?xml version="1.0"?>
<package>
  <name>youbot_gui</name>
  <version>0.1.0</version>
  <description>

     YouBot Graphical User Interface created by Mateusz Talma, Arkadiusz Szczech, Jakub Wawrzenczak based on QT ROS GUI.

  </description>
  <author>Mateusz Talma</author>
  <author>Arkadiusz Szczech</author>
  <author>Jakub Wawrzenczak</author>
  <maintainer email="mateusz.talma@student.put.poznan.pl">Mateusz Talma</maintainer>
  <maintainer email="arkadiusz.szczech@student.put.poznan.pl">Arkadiusz Szczech</maintainer>
  <maintainer email="jakub.wawrzenczak@student.put.poznan.pl">Jakub Wawrzenczak</maintainer>
  <license>LGPL, BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>youbot_driver</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>youbot_driver</run_depend>
  <run_depend>cmake_modules</run_depend>
 
</package>
